mylar/mylar-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mylar
  namespace: default
  labels:
    app: mylar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      containers:
      - name: mylar
        image: linuxserver/mylar3
        imagePullPolicy: Always
        ports:
          - containerPort: 8090
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /comics
            name: comics
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: mylar
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads/transmission
      - name: comics
        hostPath:
          path: /mnt/share/Comics
